# Elfo

./: .gitignore  README.md  pyproject.toml
src/elfo/: __init__.py  oscillators.py
tests/: test_oscillators.py
